# Hecate

./: .gitignore  README.md
extension/: background.js  manager.html  manager.js  manifest.json  popup.html  popup.js
install/: install-chromium.sh
native/: Cargo.toml
native/src/: main.rs  nm.rs  store.rs  vault.rs
