[package]
name = "hecate"
version = "0.1.0"
edition = "2021"
description = "hecate native app — local bookmark store + native-messaging host"

[[bin]]
name = "hecate"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
