[package]
name = "hecate"
version = "0.1.0"
edition = "2021"
description = "hecate native app — local bookmark store + native-messaging host"

[[bin]]
name = "hecate"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
zeroize = "1.8.2"
base64 = "0.22.1"
